--- a/signIn.html
+++ b/signIn.html
@@ -41,7 +41,7 @@
             <form>
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
-                <button type="submit">Sign In</button>
+                <button type="submit"class="sign-up-button">Sign In</button>
             </form>
             <div class="social-login">
                 <a href="https://web.facebook.com/login.php/?_rdc=1&_rdr" target="_blank">F</a>
