--- a/signUp.html
+++ b/signUp.html
@@ -36,13 +36,13 @@
                 <input type="Addrress" placeholder="Addrress" required>
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
-                <button type="submit">Sign Up</button>
+                <button type="submit" class="sign-up-button">Sign Up</button>
             </form>
             <div class="social-login">
                 <a href="https://web.facebook.com/login.php/?_rdc=1&_rdr" target="_blank">F</a>
                 <a href="https://accounts.google.com/v3/signin/identifier" target="_blank">G</a>
             </div>
-            <p>You have an account? <a href="signIn.html">Login</a></p>
+            <p class="have-account">You have an account? <a href="signIn.html">Login</a></p>
         </div>
         <div class="left-panel">
             <div class="illustration">
