--- a/signUp.html
+++ b/signUp.html
@@ -33,9 +33,11 @@
             <form>
                 <input type="name" placeholder="Name" required>
                 <input type="ID" placeholder="ID" required>
-                <input type="Addrress" placeholder="Addrress" required>
+                <input type="Addrress" placeholder="Full Addrress" required>
                 <input type="email" placeholder="Email" required>
+                <input type="tel" placeholder="Phone Number" required>
                 <input type="password" placeholder="Password" required>
+                <input type="password" placeholder="Confirm Password" required>
                 <button type="submit" class="sign-up-button">Sign Up</button>
             </form>
             <div class="social-login">
