--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-Step Form</title>
+    <title>Insurance Policy</title>
     <link rel="stylesheet" href="design.css">
 </head>
 
