--- a/signIn.html
+++ b/signIn.html
@@ -18,10 +18,10 @@
           <nav class="navbar">
             <a href="index.html" >Home </a>
             <a href=".html">About</a>
-            <a href="cart.html">Services</a>
+            <a href="form.html">Services</a>
             <a href="login.html">Contact us</a>
-            <a href="login.html">Login</a>
-            <a href="signup.html">Sign up</a>
+            <a href="signIn.html">Login</a>
+            <a href="signUp.html">Sign up</a>
           </nav>
         </header>
     </div>
@@ -46,9 +46,12 @@
             <div class="social-login">
                 <a href="https://web.facebook.com/login.php/?_rdc=1&_rdr" target="_blank">F</a>
                 <a href="https://accounts.google.com/v3/signin/identifier" target="_blank">G</a>
+                
             </div>
-            <p>Don't have an account? <a href="signUp.html">Sign up</a></p>
+            <p>Don't have an account? <a href="signUp.html">Sign up</a></p>  
         </div>
+        </div>
+    
     </div>
 </body>
 </html>
