--- a/form.html
+++ b/form.html
@@ -9,6 +9,21 @@
 </head>
 
 <body class="form">
+    <div>
+        <header class="header">
+          <div class="logo">
+            <span> 🛡️ Amanak</span> 
+          </div>
+          <nav class="navbar">
+            <a href="index.html" >Home </a>
+            <a href=".html">About</a>
+            <a href="form.html">Services</a>
+            <a href="login.html">Contact us</a>
+            <a href="signIn.html">Login</a>
+            <a href="signUp.html">Sign up</a>
+          </nav>
+        </header>
+          </div>
     <div class="container_all_form">
         <div class="sidebar">
             <h2>Step <span id="stepNumber"></span></h2>
