--- a/signUp.html
+++ b/signUp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--  -->
     <link rel="stylesheet" href="design.css">
-    <title>Login Page</title>
+    <title>Sign UP Page</title>
 </head>
 <body class="body_login">
     <div class="container">
@@ -40,6 +40,7 @@
                 <input type="password" placeholder="Confirm Password" required> 
                 <button type="submit" class="sign-up-button">Sign Up</button>
             </form>
+  
             <div class="social-login">
                 <a href="https://web.facebook.com/login.php/?_rdc=1&_rdr" target="_blank">F</a>
                 <a href="https://accounts.google.com/v3/signin/identifier" target="_blank">G</a>
