--- a/signIn.html
+++ b/signIn.html
@@ -43,6 +43,7 @@
                 <input type="password" placeholder="Password" required>
                 <button type="submit"class="sign-up-button">Sign In</button>
             </form>
+            <p> <a href="forgetPass.html">Forget Your Passwprd ?</a></p>  
             <div class="social-login">
                 <a href="https://web.facebook.com/login.php/?_rdc=1&_rdr" target="_blank">F</a>
                 <a href="https://accounts.google.com/v3/signin/identifier" target="_blank">G</a>
