update color button

--- a/forgetPass.html
+++ b/forgetPass.html
@@ -73,11 +73,14 @@
 
         }
 
-        a:hover {
-            text-decoration: underline;
-            color: #000000;
+        a {
+            color: #007b5e;
         }
 
+        a:hover {
+            text-decoration: underline;
+            color: #11abf3;
+        }
         .navbar a {
             text-decoration: none;
             margin: 0 15px;
@@ -122,7 +125,7 @@
         .submit {
             width: 100%;
             padding: 10px;
-            background-color: #000000;
+            background-color: #007b5e;
             color: white;
             border: none;
             border-radius: 25px;
