--- a/reset.html
+++ b/reset.html
@@ -74,9 +74,13 @@
 
         }
 
+        a {
+            color: #007b5e;
+        }
+
         a:hover {
             text-decoration: underline;
-            color: #000000;
+            color: #11abf3;
         }
 
         .navbar a {
@@ -123,7 +127,7 @@
         .submit {
             width: 100%;
             padding: 10px;
-            background-color: #000000;
+            background-color: #007b5e;
             color: white;
             border: none;
             border-radius: 25px;
@@ -199,7 +203,7 @@
 
                 <!-- <img src="eee279c7d9b4c4e5fc060a9f9bb61c5f.jpg" width="500"> -->
                 <!-- <img src="Reset password-bro.png" width="500"> -->
-                <img src="images/Reset password-pana.png"width="500">
+                <img src="images/Reset password-pana.png" width="500">
 
             </div>
         </div>
